<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nomAlum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombre"
        />

    <EditText
        android:id="@+id/edadAlum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/carnAlum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/carnet"
         />

    <EditText
        android:id="@+id/carrAlum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/carrera"
         />

</LinearLayout>