<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="10dp"
    android:layout_width="match_parent"

    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_listview"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="85sp"
                            android:layout_height="wrap_content"
                            android:text="@string/nombre"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/lblnombrelst"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:textColor="#302F2F"
                            android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                        <TextView
                            android:layout_width="85sp"
                            android:layout_height="wrap_content"
                            android:text="@string/edad"
                            android:textColor="#090909"
                            android:textStyle="bold"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/lbledadlst"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:textColor="#302F2F"
                            android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                        <TextView
                            android:layout_width="85sp"
                            android:layout_height="wrap_content"
                            android:text="@string/carnet"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/lblcarnetlst"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:textColor="#302F2F"
                            android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                        <TextView
                            android:layout_width="85sp"
                            android:layout_height="wrap_content"
                            android:text="@string/carrera"
                            android:textColor="#070707"
                            android:textStyle="bold"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/lblcarreralst"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:textColor="#302F2F"
                            android:textSize="16sp" />
                </LinearLayout>

        </LinearLayout>

</android.support.v7.widget.CardView>